[gd_scene load_steps=8 format=3 uid="uid://dbdghbybotxqe"]

[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_84hqc"]
[ext_resource type="Texture2D" uid="uid://dnr2qbigrqmck" path="res://Assets/Tile.png" id="1_duixy"]
[ext_resource type="Texture2D" uid="uid://cycj7ld7xbfhc" path="res://Assets/Map1Base.png" id="2_fbolj"]
[ext_resource type="PackedScene" uid="uid://bnuilw8q5ukjn" path="res://Scenes/Ball.tscn" id="3_7gu8y"]
[ext_resource type="PackedScene" uid="uid://bcftogoyybwc1" path="res://Scenes/Button.tscn" id="5_rts3a"]
[ext_resource type="PackedScene" uid="uid://d3nbgcthr76ur" path="res://Scenes/Door.tscn" id="6_0drpf"]
[ext_resource type="FontFile" uid="uid://dyhmpawkgkv3n" path="res://Assets/LondrinaSolid-Black.ttf" id="9_1nl3n"]

[node name="TestGame" type="Node2D"]
script = ExtResource("1_84hqc")
game_type = 1

[node name="Bg" type="Node2D" parent="."]
z_index = -11
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Map" type="Sprite2D" parent="Bg"]
position = Vector2(960, 540)
texture = ExtResource("2_fbolj")

[node name="TextureRect" type="TextureRect" parent="Bg"]
visible = false
offset_left = -496.0
offset_top = -296.0
offset_right = 2486.0
offset_bottom = 1471.0
texture = ExtResource("1_duixy")
stretch_mode = 1

[node name="Ball" parent="." instance=ExtResource("3_7gu8y")]
position = Vector2(64, 199)

[node name="ButtonDoors" type="Node2D" parent="."]

[node name="Button" parent="ButtonDoors" instance=ExtResource("5_rts3a")]
position = Vector2(818, 125)
connected_door_path = NodePath("../Door")

[node name="Button2" parent="ButtonDoors" instance=ExtResource("5_rts3a")]
position = Vector2(258, 517)
rotation = 1.5708
scale = Vector2(1, 0.998281)
connected_door_path = NodePath("../Door2")

[node name="Button4" parent="ButtonDoors" instance=ExtResource("5_rts3a")]
position = Vector2(1405, 993)
rotation = -1.5708
scale = Vector2(1, 0.998281)
connected_door_path = NodePath("../Door4")

[node name="Button3" parent="ButtonDoors" instance=ExtResource("5_rts3a")]
position = Vector2(1119, 637)
scale = Vector2(1, 0.998281)
connected_door_path = NodePath("../Door3")

[node name="Door" parent="ButtonDoors" instance=ExtResource("6_0drpf")]
position = Vector2(818, 413)

[node name="Door3" parent="ButtonDoors" instance=ExtResource("6_0drpf")]
position = Vector2(1118, 840)
rotation = 3.14159

[node name="Door2" parent="ButtonDoors" instance=ExtResource("6_0drpf")]
position = Vector2(45, 516)
rotation = -1.5708

[node name="Door4" parent="ButtonDoors" instance=ExtResource("6_0drpf")]
position = Vector2(1799, 993)
rotation = 1.5708

[node name="Col" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Col"]
position = Vector2(-1, 0)
polygon = PackedVector2Array(1, 482, 1, 546, 64, 546, 64, 482)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Col"]
position = Vector2(191, 11)
polygon = PackedVector2Array(1, 338, 1, 874, 64, 874, 66, 338)

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="Col"]
position = Vector2(512, -481)
polygon = PackedVector2Array(50, 651, 51, 830, -130, 829, -130, 895, 114, 895, 114, 650)

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="Col"]
position = Vector2(517, -227)
polygon = PackedVector2Array(-136, 832, -135, 897, 44, 897, 44, 1307, 108, 1307, 108, 833)

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1620, -695)
polygon = PackedVector2Array(-158, 832, -158, 897, 44, 897, 44, 1596, 108, 1596, 108, 833)

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1412, -479)
polygon = PackedVector2Array(-62, 827, -63, 480, -128, 478, -128, 892, 116, 894, 116, 829)

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1399, 1500)
rotation = 3.14159
polygon = PackedVector2Array(50, 651, 49.0001, 830, -130, 829, -130, 895, 114, 895, 114, 650)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Col"]
position = Vector2(381, 339)
polygon = PackedVector2Array(1, 482, 1, 546, 65, 546, 65, 482)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1284, 534)
polygon = PackedVector2Array(1, 482, 1, 546, 65, 546, 65, 482)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1464, 304)
polygon = PackedVector2Array(1, 482, 1, 546, 65, 546, 65, 482)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="Col"]
position = Vector2(784, 397)
polygon = PackedVector2Array(1, 209, 1, 546, 65, 546, 65, 209)

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1061, 397)
polygon = PackedVector2Array(1, 209, 1, 546, 65, 546, 65, 209)

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="Col"]
position = Vector2(784, -133)
polygon = PackedVector2Array(1, 259, 1, 546, 65, 546, 65, 259)

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="Col"]
position = Vector2(1061, -133)
polygon = PackedVector2Array(1, 259, 1, 546, 65, 546, 65, 259)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Col"]
visible = false
build_mode = 1
polygon = PackedVector2Array(0, 1080, 1920, 1080, 1920, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 11

[node name="DimRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.733333)

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/DimRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Countdown" type="Label" parent="CanvasLayer/DimRect/CenterContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.721569, 0.760784, 0.65098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.219608)
theme_override_constants/shadow_offset_x = 40
theme_override_constants/shadow_offset_y = 40
theme_override_fonts/font = ExtResource("9_1nl3n")
theme_override_font_sizes/font_size = 180
text = "1"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 156.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.654902, 0.862745, 0.811765, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.117647)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("9_1nl3n")
theme_override_font_sizes/font_size = 60
text = "2:00"

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="S1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(86, 76)

[node name="S3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(83, 988)

[node name="S2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1795, 1008)

[node name="S4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1825, 83)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
